wordpress/wordpress_files/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: askjwordpress
  labels:
    name: askjwordpress
