wordpress/wordpress_files/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: askjwordpress
  name: askjwordpress
  labels:
    app: askjwordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: askjwordpress
  template:
    metadata:
      labels:
        app: askjwordpress
    spec:
      containers:
      - name: askjwordpress
        image: <IP>:5000/askj/wordpress:latest #original image wordpress:6.0-php8.1
        ports:
        - containerPort: 80
