wordpress/wordpress_files/k8s/dbsvc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: askjwordpress
  name: <db_host> # Has to used at deployment.yml as DB HOST
spec:
  type: ExternalName
  externalName: <rds_endpoint> # RDS Endpoint
