wordpress/wordpress_files/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: askjwordpress
  name: <db_host>
  labels:
    app: askjwordpress
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: askjwordpress
