wordpress/wordpress_files/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: askjwordpress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  generation: 2
  name: askjwordpress-ingress
spec:
  rules:
  - host: wordpress.askj.academy.labs.automationlogic.com
    http:
      paths:
      - backend:
          service:
            name: <db_host>
            port:
              number: 80
        path: /
        pathType: Prefix
